# airwallex-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
airwallex/: __init__.py  client.py
airwallex/api/: __init__.py  base.py
airwallex/models/: __init__.py
examples/: example_financial_transactions.py  issuing_examples.py  usage_examples.py
tests/: test_client.py  test_exceptions.py  test_invoice.py
